--- a/employees/src/components/Btn/Btn.module.scss
+++ b/employees/src/components/Btn/Btn.module.scss
@@ -1,8 +1,8 @@
 .btn {
     padding: 10px 15px;
-    background: #75d3fd96;
-    max-width: 150px;
+    background: #3e77f296;
     cursor: pointer;
-    border: .5px solid #000;
     border-radius: 5px;
+    color: #fff;
+    border: 0;
 }
