--- a/employees/src/components/Modal/Modal.module.scss
+++ b/employees/src/components/Modal/Modal.module.scss
@@ -11,16 +11,23 @@
         box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
         position: relative;
         border-radius: 15px;
-        padding: 25px;
         background: white;
-        min-width: 550px
+        min-width: 350px;
+        width: 100%;
+        max-width: 600px;
+        .title{
+            border-top-left-radius: 10px; 
+            border-top-right-radius: 10px; 
+            padding: 10px;
+            color:#fff;
+            background: grey;
+        }
+        .back{
+            text-decoration: underline;
+            margin-top: 10px;
+            margin-left: 20px;
+        }
     }
-    &__close {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        cursor: pointer;
-      }
 }
 
 .modal_active {
