integrated the notification library into the application, refactoring

--- a/employees/src/components/Person/Person.module.scss
+++ b/employees/src/components/Person/Person.module.scss
@@ -4,6 +4,7 @@
         float: right;
         font-size: 25px;
         svg{
+            user-select: none;
             margin: 0 5px;
         }
     }
