--- a/employees/src/components/Persons/Persons.module.scss
+++ b/employees/src/components/Persons/Persons.module.scss
@@ -9,10 +9,13 @@
 
     th {
         padding: 5px 0;
-
     }
 }
 
-.persons-empty{
+.list {
+    text-align: center;
+}
+
+.persons-empty {
     font-weight: bold;
 }
