--- a/employees/src/index.scss
+++ b/employees/src/index.scss
@@ -22,8 +22,14 @@ a {
 }
 
 .container {
-  padding: 80px 30px;
+  padding: 20px;
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
+}
+
+@media (max-width:375px) {
+  .container{
+    padding: 10px;
+  }
 }
