--- a/employees/src/components/Modal/Modal.module.scss
+++ b/employees/src/components/Modal/Modal.module.scss
@@ -25,6 +25,7 @@
         }
 
         .back {
+            cursor: pointer;
             text-decoration: underline;
             margin-top: 10px;
             margin-left: 20px;
